# 3d-game-ai-presentation

./: .gitignore  .mcp.json  CLAUDE.md  MANIM_VIDEO_PLAN.md  VoxFormer-Elite-Guide.md  components.json  decoder_fix.py  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test_ctc_decode.py  test_inference.py  train_stage3.sh  trainer_patch_stage3.py
MCP/: blender_mcp_client.py  blender_mcp_gui.py  gui_setup_guide.md  run_blender_client.bat
backend/: app.py  avatar_api.py  download_salesforce_docs.py  governance_api.py  harbyx_client.py  ingest_documents.py  ingest_local.py  ingest_openai.py  ingest_salesforce_docs.py  ingest_salesforce_faiss.py  rag_api.py  rag_api_production.py  requirements.txt  sadtalker_wrapper.py  salesforce_mcp_api.py  salesforce_rag_api.py  salesforce_service.py  setup_database.py  setup_salesforce_database.py  test_salesforce_server.py
configs/: stage3.yaml
docs/: BACKLOG_JIRA_IMPORT.csv  BACKLOG_JIRA_IMPORT_V2.csv  COMMERCIAL_SAAS_PLAN.md  CONSULTING_DELIVERY_OS_ROADMAP.md  CONSULTING_DELIVERY_OS_ROADMAP_V2.md  PRODUCT_BACKLOG_6_MONTHS.csv  PRODUCT_BACKLOG_6_MONTHS.md  RAG-research.md  RECOMMENDATIONS.md  SPRINT_PLANNING_SUMMARY.md  SPRINT_PLANNING_SUMMARY_V2.md  SPRINT_PLAN_6_MONTHS.md  TRAINING_RESULTS.md  TTS_LipSync_2025_Guide.md  VPS_ACCESS.md
exported-assets/: chart_script.py  chart_script_1.py  chart_script_2.py  implementation-checklist.md  tts-lipsync-research.md
gpu_api/: blender_generator.py  blender_mcp.py  blender_mcp_api.py  full_demo_api.py  gpu_proxy.py  start_gpu_tunnel.sh
latexreport/: main.aux  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
manim-videos/: README.md  custom_config.yml  manim.cfg  manim_imports_ext.py  render_all.py  test_scene.py
voxformer/: README.md  evaluation_results.json  pyproject.toml
voxformer/configs/: stage1.yaml  stage2.yaml  stage3_gaming.yaml
voxformer/scripts/: evaluate_quality.py  export_onnx.py  train.py  train_tokenizer.py
voxformer/src/: __init__.py
voxformer/src/data/: __init__.py  dataset.py  tokenizer.py
voxformer/src/inference/: __init__.py  onnx_inference.py  streaming.py
voxformer/src/model/: __init__.py  conformer.py  decoder.py  voxformer.py  wavlm_frontend.py  zipformer.py
voxformer/src/training/: __init__.py  loss.py  metrics.py  trainer.py
voxformer/tests/: test_model.py
(+342 files in other folders)
